Added more songs

--- a/TheAgarwalBlog/playlists/RockMusic/RockMusicListeningParty-25.04.html
+++ b/TheAgarwalBlog/playlists/RockMusic/RockMusicListeningParty-25.04.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Ysabeau+SC:wght@1..1000&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="content">
 
     <div class="song">
       <div class="song-bg" id="stairway-to-heaven"></div>
@@ -121,7 +120,8 @@
       <h1 class="song-title">Going Under</h1>
       <h2 class="song-credit">Evanescence</h2>
       <h3 class="song-meta">Album "Fallen", 2003</h3>
-      <p class="song-lyrics">Now I will tell you what I've done for you
+      <p class="song-lyrics">
+        Now I will tell you what I've done for you
         50 thousand tears I've cried
         Screaming, deceiving, and bleeding for you
         And you still won't hear me (going under)
@@ -162,5 +162,342 @@
       </p>
     </div>
 
+
+
+    <div class="song">
+      <div class="song-bg" id="carnival-of-rust"></div>
+      <h1 class="song-title">Carnival of Rust</h1>
+      <h2 class="song-credit">Poets of the Fall</h2>
+      <h3 class="song-meta">Album "Fallen", 2008</h3>
+      <p class="song-lyrics">
+        D'you breathe the name of your saviour
+        In your hour of need?
+        And taste the blame if the flavor
+        Should remind you of greed
+        Of implication, insinuation, and ill-will
+        'Til you cannot lie still
+        In all this turmoil, before red cape and foil
+        Come closing in for a kill
+        Come feed the rain
+        'Cause I'm thirsty for your love
+        Dancing underneath the skies of lust
+        Yeah, feed the rain
+        'Cause without your love, my life
+        Ain't nothing but this carnival of rust, oh
+        It's all a game, avoiding failure
+        When true colors will bleed
+        All in the name of misbehavior
+        And the things we don't need
+        I lust for after, no disaster can touch
+        Touch us anymore
+        And more than ever, I hope to never fall
+        Where enough is not the same it was before
+        Come feed the rain
+        'Cause I'm thirsty for your love
+        Dancing underneath the skies of lust
+        Yeah, feed the rain
+        'Cause without your love, my life
+        Ain't nothing but this carnival of rust
+        Yeah, feed the rain
+        'Cause I'm thirsty for your love
+        Dancing underneath the skies of lust
+        Yeah, feed the rain
+        'Cause without your love, my life
+        Ain't nothing but this carnival of rust (carnival of rust)
+        Don't walk away
+        Don't walk away, oh, when the world is burning
+        Don't walk away
+        Don't walk away, oh, when the heart is yearning
+        Don't walk away
+        Don't walk away, oh, when the world is burning
+        Don't walk away
+        Don't walk away, oh, when the heart is yearning
+      </p>
+    </div>
+
+
+
+    <div class="song">
+      <div class="song-bg" id="have-a-cigar"></div>
+      <h1 class="song-title">Have a Cigar</h1>
+      <h2 class="song-credit">Pink Floyd, covered by The Main Squeeze</h2>
+      <h3 class="song-meta">Album "Wish You Were Here" 1975, covered in 2021</h3>
+      <p class="song-lyrics">
+        Come in here, dear boy, have a cigar, you're gonna go far
+        You're gonna fly, you're never gonna die
+        You're gonna make it if you try, they're gonna love you
+        Well, I've always had a deep respect and I mean that most sincere
+        The band is just fantastic, that is really what I think
+        Oh, by the way, which one's pink?
+        And did we tell you the name of the game, boy?
+        We call it riding the gravy train
+        We're just knocked out, we heard about the sell-out
+        You gotta get an album out, you owe it to the people
+        We're so happy we can hardly count
+        Everybody else is just green, have you seen the chart?
+        It's a hell of a start, it could be made into a monster
+        If we all pull together as a team
+        And did we tell you the name of the game, boy?
+        We call it riding the gravy train
+      </p>
+    </div>
+
+    <div class="song">
+      <div class="song-bg" id="man-in-the-box"></div>
+      <h1 class="song-title">Man in the Box</h1>
+      <h2 class="song-credit">Alice In Chains</h2>
+      <h3 class="song-meta">Album "Facelift", 1990</h3>
+      <p class="song-lyrics">
+        I'm the man in the box, buried in my shit
+        Won't you come and save me, save me?
+        Feed my eyes, can you sew them shut?
+        Jesus Christ, deny your maker
+        He who tries, will be wasted
+        Feed my eyes, now you've sewn them shut
+        I'm the dog who gets beat, shove my nose in shit
+        Won't you come and save me, save me?
+        Feed my eyes, can you sew them shut?
+        Jesus Christ, deny your maker
+        He who tries, will be wasted
+        Feed my eyes, now you've sewn them shut
+        Feed my eyes, can you sew them shut?
+        Jesus Christ, deny your maker
+        He who tries, will be wasted
+        Feed my eyes, now you've sewn them shut
+      </p>
+    </div>
+
+
+    <div class="song">
+      <div class="song-bg" id="i-am-the-highway"></div>
+      <h1 class="song-title">I Am The Highway</h1>
+      <h2 class="song-credit">Audioslave</h2>
+      <h3 class="song-meta">Album "Audioslave", 2002</h3>
+      <p class="song-lyrics">
+        Pearls and swine bereft of me
+        Long and weary my road has been
+        I was lost in the cities
+        Alone in the hills
+        No sorrow or pity for leaving, I feel, yeah
+        I am not your rolling wheels
+        I am the highway
+        I am not your carpet ride
+        I am the sky
+        Friends and liars don't wait for me
+        'Cause I'll get on all by myself
+        I put millions of miles
+        Under my heels
+        And still too close to you, I feel, yeah
+        I am not your rolling wheels
+        I am the highway
+        I am not your carpet ride
+        I am the sky
+        I am not your blowing wind
+        I am the lightning
+        I am not your autumn moon
+        I am the night
+        The night
+        Yeah, I am not your rolling wheels
+        I am the highway
+        I am not your carpet ride
+        I am the sky
+        Well, I am not your blowing wind
+        I am the lightning
+        I am not your autumn moon
+        I am the night
+        The night
+        Yeah, yeah
+        Yeah, yeah
+        Yeah, yeah
+        Yeah, yeah
+      </p>
+    </div>
+
+
+
+
+    <div class="song">
+      <div class="song-bg" id="overflow"></div>
+      <h1 class="song-title">Overflow</h1>
+      <h2 class="song-credit">Linkin Park</h2>
+      <h3 class="song-meta">Album "From Zero", 2024</h3>
+      <p class="song-lyrics">
+        It's all the same to me
+        I keep on filling it up
+        It's all the same to me (yeah)
+        I keep on filling it up
+        We're all dressed up for a riot
+        Catching fire, fighting fire
+        I can feel the pressure comin'
+        End the world and push the button
+        It's all the same to me
+        We're going down, we're going down, we're going down, we're going down
+        It's all the same to me
+        We're going down, we're going down, we're going down, we're going down
+        Turnin' from a white sky to a black hole
+        Turnin' from the sunlight to a shadow
+        I know I can't make it stop
+        I know I'm out of control
+        I keep on filling it up to overflow
+        Looking up, the sky is (fallin') fallin'
+        I can hear the future (callin') callin'
+        Ground is shakin' as it opens up to pull me in
+        Fall into oblivion (it's all the same to me)
+        We're going down, we're going down, we're going down, we're going down
+        It's all the same to me
+        We're going down, we're going down, we're going down, we're going down
+        Turnin' from a white sky to a black hole
+        Turnin' from the sunlight to a shadow
+        I know I can't make it stop
+        I know I'm out of control
+        I keep on filling it up to overflow
+        To overflow
+        To overflow
+        To overflow
+        To overflow
+      </p>
+    </div>
+
+
+
+
+    <div class="song">
+      <div class="song-bg" id="summer-of-69"></div>
+      <h1 class="song-title">Summer of '69</h1>
+      <h2 class="song-credit">Bryan Adams</h2>
+      <h3 class="song-meta">Album "Reckless", 1985</h3>
+      <p class="song-lyrics">
+        I got my first real six-string
+        Bought it at the Five and Dime
+        Played it 'til my fingers bled
+        Was the summer of '69
+
+        Me and some guys from school
+        Had a band and we tried real hard
+        Jimmy quit, Jody got married
+        Should've known we'd never get far
+
+        Oh, when I look back now
+        That summer seemed to last forever
+        And if I had the choice
+        Yeah, I'd always wanna be there
+        Those were the best days of my life
+
+        Hey!
+
+        Ain't no use in complainin'
+        When you got a job to do
+        Spent my evenings down at the drive-in
+        And that's when I met you, yeah
+        
+        Standin' on your mama's porch
+        You told me that you'd wait forever
+        Oh, and when you held my hand
+        I knew that it was now or never
+        Those were the best days of my life
+
+        Oh, yeah
+        Back in the summer of '69, oh
+
+        Man, we were killin' time
+        We were young and restless
+        We needed to unwind
+        I guess nothing can last forever
+        Forever, no!
+
+        Yeah! Yeah!
+
+        And now the times are changin'
+        Look at everything that's come and gone
+        Sometimes when I play that old six-string
+        Think about you, wonder what went wrong
+        Standin' on your mama's porch
+        You told me that it'd last forever
+        Oh, and when you held my hand
+        I knew that it was now or never
+        Those were the best days of my life
+
+        Oh, yeah
+        Back in the summer of '69, uh-huh
+        It was the summer of '69, oh, yeah
+        Me and my baby in a '69, oh, oh
+        It was the summer, summer, summer of '69
+        Yeah
+      </p>
+    </div>
+
+
+    <div class="song">
+      <div class="song-bg" id="sympathy-for-the-devil"></div>
+      <h1 class="song-title">Sympathy for the Devil</h1>
+      <h2 class="song-credit">Rolling Stones, covered by Guns N' Roses</h2>
+      <h3 class="song-meta">Album "Beggars Banquet", 1968 covered in 1994</h3>
+      <p class="song-lyrics">
+        Please allow me to introduce myself
+        I'm a man of wealth and taste
+        I've been around for a long, long year
+        Stole many a man's soul and faith
+        And I was 'round when Jesus Christ
+        Had his moment of doubt and pain
+        Made damn sure that Pilate
+        Washed his hands and sealed his fate
+        Pleased to meet you
+        Hope you guess my name
+        But what's puzzling you
+        Is the nature of my game
+        I stuck around St. Petersberg
+        When I saw it was a time for a change
+        I killed the Czar and his ministers
+        Anastasia screamed in vain
+        I rode a tank
+        Held a general's rank
+        When the Blitzkrieg raged
+        And the bodies stank
+        Pleased to meet you
+        Hope you guess my name, oh yeah
+        What's puzzling you is the nature of my game, oh yeah
+        I watched with glee as your kings and queens
+        Fought for ten decades
+        For the Gods they made
+        I shouted out
+        "Who killed the Kennedy?"
+        When after all
+        It was you and me
+        So let me please introduce myself
+        I'm a man of wealth and taste
+        And I laid traps for troubadours
+        Who get killed before they reached Bombay
+        Pleased to meet you
+        Hope you guessed my name, oh yeah
+        But what's puzzling you is the nature of my game, oh yeah
+        Pleased to meet you
+        Hope you guessed my name, oh yeah
+        But what's puzzling you is just the nature of my game
+        Just as every cop is a criminal
+        And all the sinners saints
+        As heads is tails just call me Lucifer
+        'Cause I'm in need of some restraint
+        So if you meet me
+        Have some courtesy
+        Have some sympathy, and some taste
+        Use all your well-learned politesse?
+        Or I'll lay your soul to waste, um yeah
+        Pleased to meet you
+        Hope you guessed my name, oh yeah
+        But what's puzzling you is the nature of my game, oh baby
+        Oh yeah
+        Tell me baby, what's my name
+        Oh tell me honey, can you guess my name?
+        Oh oh oh oh
+        Tell me honey, what's my name
+        Oh, just the sweetest, tell me what's my name?
+        Tell me, sweetie, what's my name
+        Oh yeah, oh yeah, oh yeah
+        Can papa get a holler now?
+      </p>
+    </div>
+
+
+    
   </body>
 </html>
