--- a/TheAgarwalBlog/playlists/RockMusic/RockMusicListeningParty-25.04.html
+++ b/TheAgarwalBlog/playlists/RockMusic/RockMusicListeningParty-25.04.html
@@ -217,7 +217,7 @@
 
 
 
-    <div class="song">
+    <div class="song" id="have-a-cigar">
       <div class="song-bg" id="have-a-cigar"></div>
       <h1 class="song-title">Have a Cigar</h1>
       <h2 class="song-credit">Pink Floyd, covered by The Main Squeeze</h2>
@@ -242,7 +242,7 @@
       </p>
     </div>
 
-    <div class="song">
+    <div class="song" id="man-in-the-box">
       <div class="song-bg" id="man-in-the-box"></div>
       <h1 class="song-title">Man in the Box</h1>
       <h2 class="song-credit">Alice In Chains</h2>
@@ -498,6 +498,160 @@
     </div>
 
 
+    <div class="song">
+      <div class="song-bg" id="thunderstruck"></div>
+      <h1 class="song-title">Thunderstruck</h1>
+      <h2 class="song-credit">AC/DC</h2>
+      <h3 class="song-meta">Album "The Razors Edge", 1990</h3>
+      <p class="song-lyrics">
+        Thunder, thunder, thunder, thunder
+        Thunder, thunder, thunder, thunder
+        Thunder, thunder
+        I was caught
+        In the middle of a railroad track (thunder)
+        I looked 'round
+        And I knew there was no turning back (thunder)
+        My mind raced
+        And I thought, what could I do? (Thunder)
+        And I knew
+        There was no help, no help from you (thunder)
+        Sound of the drums
+        Beating in my heart
+        The thunder of guns
+        Tore me apart
+        You've been
+        Thunderstruck
+        Rode down the highway
+        Broke the limit, we hit the town
+        Went through to Texas, yeah, Texas, and we had some fun
+        We met some girls
+        Some dancers who gave a good time
+        Broke all the rules
+        Played all the fools
+        Yeah, yeah, they, they, they blew our minds
+        And I was shaking at the knees
+        Could I come again, please?
+        Yeah, them ladies were too kind
+        You've been
+        Thunderstruck, thunderstruck
+        Yeah, yeah, yeah, thunderstruck
+        Ooh, thunderstruck, yeah
+        I was shaking at the knees
+        Could I come again, please? Oh
+        Thunderstruck, thunderstruck
+        Yeah, yeah, yeah, thunderstruck, thunderstruck
+        Yeah, yeah, yeah, said, yeah, it's alright, we're doin' fine
+        Yeah, it's alright, we're doin' fine, so fine
+        Thunderstruck, yeah, yeah, yeah
+        Thunderstruck, thunderstruck
+        Thunderstruck, whoa, baby, baby
+        Thunderstruck, you've been thunderstruck
+        Thunderstruck, thunderstruck
+        Thunderstruck, you've been thunderstruck
+      </p>
+    </div>
+
+
+    <div class="song">
+      <div class="song-bg" id="new-divide"></div>
+      <h1 class="song-title">New Divide</h1>
+      <h2 class="song-credit">Linkin Park</h2>
+      <h3 class="song-meta">Album "Transformers: Revenge of the Fallen", 2009</h3>
+      <p class="song-lyrics">
+        I remembered black skies
+        The lightning all around me
+        I remembered each flash
+        As time began to blur
+        Like a startling sign
+        That fate had finally found me
+        And your voice was all I heard
+        That I get what I deserve
+        So give me reason
+        To prove me wrong
+        To wash this memory clean
+        Let the floods cross
+        The distance in your eyes
+        Give me reason
+        To fill this hole
+        Connect this space between
+        Let it be enough to reach the truth that lies
+        Across this new divide
+        There was nothing in sight
+        But memories left abandoned
+        There was nowhere to hide
+        The ashes fell like snow
+        And the ground caved in
+        Between where we were standing
+        And your voice was all I heard
+        That I get what I deserve
+        So give me reason
+        To prove me wrong
+        To wash this memory clean
+        Let the floods cross
+        The distance in your eyes
+        Across this new divide
+        In every loss, in every lie
+        In every truth that you'd deny
+        And each regret, and each goodbye
+        Was a mistake too great to hide
+        And your voice was all I heard
+        That I get what I deserve
+        So give me reason
+        To prove me wrong
+        To wash this memory clean
+        Let the floods cross
+        The distance in your eyes
+        Give me reason
+        To fill this hole
+        Connect this space between
+        Let it be enough to reach the truth that lies
+        Across this new divide
+        Across this new divide
+        Across this new divide
+      </p>
+    </div>
     
+
+    <div class="song">
+      <div class="song-bg" id="numb"></div>
+      <h1 class="song-title">Numb</h1>
+      <h2 class="song-credit">Linkin Park</h2>
+      <h3 class="song-meta">Album "Meteora", 2003</h3>
+      <p class="song-lyrics">
+        I'm tired of being what you want me to be
+        Feeling so faithless, lost under the surface
+        I don't know what you're expecting of me
+        Put under the pressure of walking in your shoes
+        Every step that I take is another mistake to you
+        (Caught in the undertow, just caught in the undertow)
+        I've become so numb, I can't feel you there
+        Become so tired, so much more aware
+        I'm becoming this, all I want to do
+        Is be more like me and be less like you
+        Can't you see that you're smothering me?
+        Holding too tightly, afraid to lose control
+        'Cause everything that you thought I would be
+        Has fallen apart right in front of you
+        Every step that I take is another mistake to you
+        (Caught in the undertow, just caught in the undertow)
+        And every second I waste is more than I can take
+        I've become so numb, I can't feel you there
+        Become so tired, so much more aware
+        I'm becoming this, all I want to do
+        Is be more like me and be less like you
+        And I know
+        I may end up failing too
+        But I know
+        You were just like me, with someone disappointed in you
+        I've become so numb, I can't feel you there
+        Become so tired, so much more aware
+        I'm becoming this, all I want to do
+        Is be more like me and be less like you
+        I've become so numb, I can't feel you there
+        I'm tired of being what you want me to be
+        I've become so numb, I can't feel you there
+        I'm tired of being what you want me to be
+        </p>
+      </div>
   </body>
 </html>
