Added Texas game to the blog

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -209,6 +209,11 @@
             <h4 class="title"><a href="games/MRisk/mrisk.html">MRisk</a></h4>
             <p class="description">A Risk themed game made entirely from HTML + JS</p>
           </div>
+          <div class="col-lg-4 col-md-6 icon-box">
+            <div class="icon"><i class="bi bi-controller"></i></div>
+            <h4 class="title"><a href="games/texas/texas.html">Texas</a></h4>
+            <p class="description">A small experiment for a single page, text-based adventure game</p>
+          </div>
           
         </div>
 
