Added brewing mead article to blog

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -241,6 +241,17 @@
               </p>
               
             </div>
+            <div class="resume-item">
+              <h4>Making Home Brewed Mead</h4>
+              <h5>
+                10 Dec 2024
+                <a href="articles/BrewingMead.html"> <span class="bi bi-chevron-right"></span>  Read Article </a>
+              </h5>
+              <p> 
+                A small article outlining the steps to make Mead (fermented alcoholic drink) at home.
+              </p>
+              
+            </div>
           </div>
         </div>
 
